linkdin profile added

--- a/index.html
+++ b/index.html
@@ -128,16 +128,16 @@
         <div class="separator"></div>
 
         <ul class="social-list">
-
+<!-- 
           <li class="social-item">
             <a href="" class="social-link">
               <ion-icon name="logo-facebook"></ion-icon>
             </a>
-          </li>
+          </li> -->
 
           <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-twitter"></ion-icon>
+            <a href="https://www.linkedin.com/in/arjun-thakar-bb556a1ba?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class="social-link">
+              <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
 
