--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>vCard - Personal Portfolio</title>
-
+  <title>Arjunthakar - Personal Portfolio</title>
+  <meta
+    content="arjun,arjunthakar,arjunthaker,arjun web developer ahmedabad,developer in ahmedabad,arjun laravel,arjunthakar dwarka,arjun thakar,freelancer,freelancers,website,web developer,software engineer,software developer  ">
   <!--
     - favicon
   -->
